--- a/Views/PDF/PrintOutward.cshtml
+++ b/Views/PDF/PrintOutward.cshtml
@@ -1,4 +1,4 @@
-﻿@model Gopal.Models.Bill.BillTypeScriptModel
+﻿@model Gopal.Models.Outward.OutwardTypeScriptModel
 @{
     Layout = null;
 }
@@ -7,20 +7,20 @@
 <html lang="en" id="print-section">
 <head>
     <meta charset="utf-8">
-    <title>Bill Receipt</title>
+    <title>Outward Receipt</title>
     <!--<link rel="stylesheet" href="style.css" media="all" />-->
     <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap' rel='stylesheet' type='text/css'>
 
     <style>
-    /* @@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
+        /* @@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
 
-    @@media print {
-      body {
-        font-family: Arial, Helvetica, sans-serif !important;
-        font-family: 'Poppins', sans-serif !important;
-        padding: 0 !important;
-      }
-    }
+        @@media print {
+            body {
+                font-family: Arial, Helvetica, sans-serif !important;
+                font-family: 'Poppins', sans-serif !important;
+                padding: 0 !important;
+            }
+        }
     </style>
 </head>
 <body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
@@ -101,12 +101,12 @@
           line-height: 18px; vertical-align: top; text-align:left">
                         <table style="width: 100%;">
                             <tr>
-                                <td style="width:30%"><strong>Bill #:</strong></td>
-                                <td>@Model.billId</td>
+                                <td style="width:30%"><strong>Outward #:</strong></td>
+                                <td>@Model.outwardId</td>
                             </tr>
                             <tr>
                                 <td><strong>Date:</strong></td>
-                                <td>@Model.billDate.Value.ToString("dd/MM/yyyy")</td>
+                                <td>@Model.outwardDate.Value.ToString("dd/MM/yyyy")</td>
                             </tr>
                         </table>
                     </td>
@@ -140,48 +140,48 @@
             <tbody>
                 @foreach (var item in Model.lstJobNumbers)
                 {
-                <tr>
-                    <td style="padding: 5px 5px;
+                    <tr>
+                        <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:left; width:13%">
-                        @item.searchValue.Substring(0, item.searchValue.IndexOf(' '))
-                    </td>
-                    <td style="padding: 5px 5px;
+                            @item.searchValue.Substring(0, item.searchValue.IndexOf(' '))
+                        </td>
+                        <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:left;width:48%">
-                        @item.modelNo, @item.materialType, @item.companyName
-                    </td>
+                            @item.modelNo, @item.materialType, @item.companyName
+                        </td>
 
-                    <td style="padding: 5px 5px;
+                        <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:left;width:13%">
-                        @item.serialNo
-                    </td>
-                    <td style="padding: 5px 5px;
+                            @item.serialNo
+                        </td>
+                        <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:right;width:13%">
-                        @if (item.advanceAmount > 0)
-                        {
-                            <span>@item.advanceAmount /-</span>
-                        }
-                        else
-                        {
-                            <span>0 /-</span>
-                        }
-                    </td>
-                    <td style="padding: 5px 5px;
+                            @if (item.advanceAmount > 0)
+                            {
+                                <span>@item.advanceAmount /-</span>
+                            }
+                            else
+                            {
+                                <span>0 /-</span>
+                            }
+                        </td>
+                        <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:right;width:13%">
-                        @item.serviceAmount /-
-                    </td>
-                </tr>
+                            @item.serviceAmount /-
+                        </td>
+                    </tr>
                 }
-                
+
             </tbody>
             <tfoot>
                 <tr>
@@ -262,9 +262,9 @@
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:right;width:13%">
-                        @{ 
+                        @{
                             var total = Model.paidImmediatlyAmount + Model.outstandingAmount;
-                                                <span>@total /-</span>
+                            <span>@total /-</span>
                         }
                     </td>
                 </tr>
